<resources>
    <string name="app_name">Seating DC</string>
    <string name="start_survey">Start survey</string>
    <string name="start_data_collection">Start data collection</string>
    <string name="agent_name_hint">Your name</string>
    <string name="startingat_hint">Starting at e.g. Otterfing</string>
    <string name="destination_hint">Direction e.g. Mammendorf</string>
    <string name="line_hint">Train line e.g. S3</string>
    <string name="date_hint">Today\'s date</string>
    <string name="wagonno_hint">Position in train e.g. 2 (second wagon from ahead)</string>
    <string name="doorno_hint">Position in wagon e.g. 3 (third door from ahead)</string>
    <string name="trainno_hint">Train number e.g. 1234567</string>
    <string name="traintype_default">ET423</string>
    <string name="action_leave">Leave</string>
    <string name="action_place_baggage">Place baggage</string>
    <string name="action_remove_baggage">Remove baggage</string>
    <string name="action_sit_down">Sit down</string>
    <string name="action_set_person_properties">Set properties</string>
    <string name="action_change_place">Change place</string>
    <string name="action_person_disturbing">Disturbing</string>
    <string name="action_person_stops_disturbing">Stops disturbing</string>
    <string name="export_data">Export data</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="disturbing">Disturbing</string>
    <string name="dialog_person_message">Update person</string>
    <string name="action_direction_change">Direction change</string>
    <string name="action_door_release">Door release</string>
    <string name="action_train_starts">Train starts</string>
    <string name="action_mark_agent">Mark agent</string>
    <string name="action_define_group">Define group</string>
    <string name="dialog_disturbing_reason">Reason for disturbing</string>
    <string name="dialog_confirm_leave">Is this person really leaving?</string>
    <string name="action_count_standing_persons">Count standing</string>
    <string name="dialog_count_standing_persons">Please input the number of standing persons</string>
    <string name="end_data_collection">End data collection</string>
    <string name="dialog_confirm_end_data_collection">Really end the data collection?</string>
    <string name="start_new_survey">Start new survey</string>
    <string name="error_invalid_number_for_count">Invalid number</string>
    <string name="error_please_select_a_person">Please select a person</string>
    <string name="error_seat_occupied_by_person">Seat is occupied by another person</string>
    <string name="action_undo">Undo</string>
    <string name="dialog_info_export_success">Export successfully finished</string>
    <string name="dialog_info_export_fail">Export failed</string>
    <string name="dialog_confirm_delete_db">Really delete the database?</string>
    <string name="delete_database">Delete database</string>
    <string name="error_cannot_undo">Cannot undo last action</string>
    <string name="info_pending_action">Select seat(s) for pending action</string>
    <string name="dialog_info_undo_update_person">Could not restore previous person properties. Please fix this by hand.</string>
    <string name="action_sit_down_place_baggage"><![CDATA[Sit down & place baggage]]></string>
    <string name="action_remove_from_group">Remove from group</string>
    <string name="error_group_must_have_more">Too few people selected — canceled</string>
    <string name="survey_delete">Delete survey</string>
    <string name="survey_new_from_template">Use for new survey</string>
    <string name="dialog_confirm_delete_survey">Really delete this survey?</string>
    <string name="action_add_other_person_to_group">Add another person to group</string>
    <string name="select_gender">Select gender</string>
    <string name="select_age_group">Select age group</string>
</resources>
